# learn-cmake

./: .gitignore
00-cmake-project-template/: CMakeLists.txt
00-cmake-project-template/binary/: CMakeLists.txt  main.c
00-cmake-project-template/binary/include/: main.h
00-cmake-project-template/lib1/: CMakeLists.txt
00-cmake-project-template/lib1/include/sublib1/: sublib1.h
00-cmake-project-template/lib1/src/: sublib1.c
00-cmake-project-template/lib2/: CMakeLists.txt
00-cmake-project-template/lib2/include/sublib2/: sublib2.h
00-cmake-project-template/script/: run.sh
01-basic/A-hello-cmake/: CMakeLists.txt  run.sh
01-basic/B-hello-headers/: CMakeLists.txt  run.sh
01-basic/B-hello-headers/include/: hello.h
01-basic/B-hello-headers/src/: hello.cpp
01-basic/C-static-library/: CMakeLists.txt  run.sh
01-basic/D-shared-library/: CMakeLists.txt
01-basic/E-installing/: CMakeLists.txt  run.sh
01-basic/E-installing/src/: hello.cpp  main.cpp
01-basic/F-build-type/: CMakeCache.txt  CMakeLists.txt  run.sh
01-basic/G-compile-flags/: CMakeLists.txt  main.cpp  run.sh
01-basic/H-third-party-library/: CMakeLists.txt  main.cpp  run.sh
02-sub-project/A-basic/: CMakeLists.txt  run.sh
02-sub-project/A-basic/sub-binary/: main.cpp
02-sub-project/A-basic/sub-lib1/: CMakeLists.txt
02-sub-project/A-basic/sub-lib1/src/: sublib1.cpp
02-sub-project/A-basic/sub-lib2/: CMakeLists.txt
03-code-generation/A-config-file/: CMakeLists.txt  main.cpp  run.sh  ver.h.in
04-static-analysis/A-clang-format/cmake/modules/: clang-format.cmake
04-static-analysis/A-clang-format/sub-prj1/: CMakeLists.txt  main1.cpp
04-static-analysis/A-clang-format/sub-prj2/: CMakeLists.txt  main.cpp
05-unit-testing/A-ctest/: CMakeLists.txt  Config.h.in  main.cpp  run.sh
05-unit-testing/A-ctest/lib-math/: CMakeLists.txt  MathFunc.c  MathFunc.cpp  MathFunc.h
